// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`commands/env > env:clone > should exit if the folder is not linked to a project, and --from is not provided 1`] = `"Please include the source project ID as the \`--from\` option, or run \`netlify link\` to link this folder to a Netlify project"`;

exports[`commands/env > env:clone > should return success message 1`] = `
"Successfully cloned environment variables from site-name to site-name-a
Changes will require a redeploy to take effect on any deployed versions of your project."
`;

exports[`commands/env > env:clone > should return without clone if there's no env in source project 1`] = `"site-name has no environment variables, nothing to clone"`;

exports[`commands/env > env:list > should hide variables values and prompt to show 1`] = `
"2 environment variables for project site-name in the dev context 
.---------------------------------------------------------------------------------------.
|                                 Environment variables                                 |
|---------------------------------------------------------------------------------------|
|     Key      |                       Value                        |       Scope       |
|--------------|----------------------------------------------------|-------------------|
| EXISTING_VAR | ************************************************** | Builds, Functions |
| OTHER_VAR    | ************************************************** | All               |
'---------------------------------------------------------------------------------------'
[?25l│
◆  Show values?
│  ○ Yes / ● No
└
[999D[4A[1B[J◇  Show values?
│  No
[?25h"
`;

exports[`commands/env > env:list > should hide variables values and show on confirm 1`] = `
"2 environment variables for project site-name in the dev context 
.---------------------------------------------------------------------------------------.
|                                 Environment variables                                 |
|---------------------------------------------------------------------------------------|
|     Key      |                       Value                        |       Scope       |
|--------------|----------------------------------------------------|-------------------|
| EXISTING_VAR | ************************************************** | Builds, Functions |
| OTHER_VAR    | ************************************************** | All               |
'---------------------------------------------------------------------------------------'
[?25l│
◆  Show values?
│  ○ Yes / ● No
└
[1A
[?25h[999D[4A[1B[J◇  Show values?
│  Yes
.----------------------------------------------.
|            Environment variables             |
|----------------------------------------------|
|     Key      |   Value   |       Scope       |
|--------------|-----------|-------------------|
| EXISTING_VAR | dev-value | Builds, Functions |
| OTHER_VAR    | all-value | All               |
'----------------------------------------------'"
`;

exports[`commands/env > env:list > should not prompt on CI 1`] = `
"2 environment variables for project site-name in the dev context 
.----------------------------------------------.
|            Environment variables             |
|----------------------------------------------|
|     Key      |   Value   |       Scope       |
|--------------|-----------|-------------------|
| EXISTING_VAR | dev-value | Builds, Functions |
| OTHER_VAR    | all-value | All               |
'----------------------------------------------'"
`;
